[package]
name = "market-api"
version = "0.1.0"
authors = ["STBoyden <stboyden@stboyden.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde", "default"] }
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["json"] }
lazy_static = "1.4"
