[package]
name = "market-api"
version = "0.1.0"
authors = ["STBoyden <stboyden@stboyden.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde", "default"] }
ctrlc = "3.1"
dashmap = { version = "3.11", features = ["serde"] }
dotenv = "0.15"
lazy_static = "1.4"
reqwest = { version = "0.10", features = ["blocking"] }
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
